RESOLVED FIXED200777
[ContentChangeObserver] Keep track of all the visibility candidates.
https://bugs.webkit.org/show_bug.cgi?id=200777
Summary [ContentChangeObserver] Keep track of all the visibility candidates.
alan
Reported 2019-08-15 11:50:39 PDT
instead of just the first one.
Attachments
Patch (9.13 KB, patch)
2019-08-15 11:59 PDT, alan
no flags
Patch (9.03 KB, patch)
2019-08-15 18:06 PDT, alan
no flags
Patch (9.08 KB, patch)
2019-08-15 18:54 PDT, alan
no flags
Post-patch (2.96 KB, patch)
2019-08-18 21:17 PDT, alan
no flags
Post-land (2.95 KB, patch)
2019-08-18 21:23 PDT, alan
zalan: commit-queue+
Radar WebKit Bug Importer
Comment 1 2019-08-15 11:51:12 PDT
alan
Comment 2 2019-08-15 11:59:55 PDT
alan
Comment 3 2019-08-15 18:06:08 PDT
WebKit Commit Bot
Comment 4 2019-08-15 18:50:14 PDT
Comment on attachment 376457 [details] Patch Rejecting attachment 376457 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 376457, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as commit-queue@webkit.org... Fetching: https://bugs.webkit.org/attachment.cgi?id=376457&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=200777&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 376457 from bug 200777. Fetching: https://bugs.webkit.org/attachment.cgi?id=376457 Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to http://svn.webkit.org/repository/webkit/trunk ... A LayoutTests/fast/events/touch/ios/content-observation/going-from-hidden-to-visible-and-to-hidden2-expected.txt A LayoutTests/fast/events/touch/ios/content-observation/going-from-hidden-to-visible-and-to-hidden2.html M LayoutTests/ChangeLog M Source/WTF/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WTF/ChangeLog' is out of date W: c2938c11c53c9fe0fdff44709902fc7d8a02be23 and refs/remotes/origin/master differ, using rebase: :040000 040000 f52a1bc293ff1d2ccef0aecec188b2813da16c94 62a6e46a1b238bf5dbb47993838afa5da281b98d M LayoutTests :040000 040000 3b878fcc6fb75321c2b0450dc0b85146a53a3f03 13b9b028a714f593ebf63ae48402e72fc9c93570 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to http://svn.webkit.org/repository/webkit/trunk ... A LayoutTests/fast/events/touch/ios/content-observation/going-from-hidden-to-visible-and-to-hidden2-expected.txt A LayoutTests/fast/events/touch/ios/content-observation/going-from-hidden-to-visible-and-to-hidden2.html M LayoutTests/ChangeLog M Source/WTF/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WTF/ChangeLog' is out of date W: c2938c11c53c9fe0fdff44709902fc7d8a02be23 and refs/remotes/origin/master differ, using rebase: :040000 040000 f52a1bc293ff1d2ccef0aecec188b2813da16c94 62a6e46a1b238bf5dbb47993838afa5da281b98d M LayoutTests :040000 040000 3b878fcc6fb75321c2b0450dc0b85146a53a3f03 13b9b028a714f593ebf63ae48402e72fc9c93570 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource From https://git.webkit.org/git/WebKit edb552b54fe..ab26b4a493d master -> origin/master Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 248753 = edb552b54fee996459e24bdff27a8247c62fb9cf r248754 = ab26b4a493d44aa8143378eb57f5a849a1c3ec01 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output: https://webkit-queues.webkit.org/results/12921529
alan
Comment 5 2019-08-15 18:54:24 PDT
WebKit Commit Bot
Comment 6 2019-08-15 19:21:03 PDT
Comment on attachment 376463 [details] Patch Clearing flags on attachment: 376463 Committed r248759: <https://trac.webkit.org/changeset/248759>
WebKit Commit Bot
Comment 7 2019-08-15 19:21:05 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 8 2019-08-17 11:43:08 PDT
Comment on attachment 376463 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=376463&action=review > Source/WebCore/page/ios/ContentChangeObserver.h:210 > + WeakHashSet<Element> m_visibilityCandidateList; Seems a little risky to have an unordered set and call it "list", which typically means ordered.
alan
Comment 9 2019-08-17 13:15:24 PDT
(In reply to Darin Adler from comment #8) > Comment on attachment 376463 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=376463&action=review > > > Source/WebCore/page/ios/ContentChangeObserver.h:210 > > + WeakHashSet<Element> m_visibilityCandidateList; > > Seems a little risky to have an unordered set and call it "list", which > typically means ordered. Oops. Indeed.
alan
Comment 10 2019-08-18 21:17:58 PDT
Created attachment 376663 [details] Post-patch
alan
Comment 11 2019-08-18 21:23:15 PDT
Created attachment 376664 [details] Post-land
Note You need to log in before you can comment on or make changes to this bug.